--- a/index.html
+++ b/index.html
@@ -11,14 +11,61 @@
         <section class="banner-container">
            <div class="banner-content">
             <img class="banner-img" src="../assets/Group.png" alt="">
-            <h1>"In the near future, I hope to become a Developer."</h1>
+            <h1>"In the near future, I hope to become a <br> Developer."</h1>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
             <button class="banner-btn">Contact with me</button>
            </div>
         </section>
     </header>
     <main>
+        <!-- Why Web Development section starts here -->
+         <section class="development">
+            <div class="web-header">
+                <h1>Why Web Development??</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+            </div>
+            <section class="web-section-1">
+                <div class="web-content">
+                <h2 class="text">I will Do Coding and Change The World</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <h4 class="btn-type">Learn More</h4>
+                </div>
+                <div>
+                    <img src="./assets/Layer_1.png" alt="">
+                </div>
+            </section>
+            <section class="web-section-1">
+                <div>
+                    <img src="./assets/Group 3.png" alt="">
+                </div>
+                <div class="web-content">
+                <h2 class="text">I will help People by creating Modern Web System</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <h4 class="btn-type">Learn More</h4>
+                </div>
+            </section>
+            <section class="web-section-1">
+                <div class="web-content">
+                <h2 class="text">I will Do Coding and Change The World</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <h4 class="btn-type">Learn More</h4>
+                </div>
+                <div>
+                    <img src="./assets/Group 4.png" alt="">
+                </div>
+            </section>
+         </section>
+        <!--My inspiration section starts here  -->
+         <section class="motivation">
+            <div>
+                <h3>My Inspiration</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+            </div>
+            <div>
+                <video controls width="400px" src=""></video>
 
+            </div>
+         </section>
     </main>
     <footer>
 
