created inspiration section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <h1>Why Web Development??</h1>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
             </div>
-            <section class="web-section-1">
+            <section class="web-section-1 web-2">
                 <div class="web-content">
                 <h2 class="text">I will Do Coding and Change The World</h2>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -34,7 +34,7 @@
                     <img src="./assets/Layer_1.png" alt="">
                 </div>
             </section>
-            <section class="web-section-1">
+            <section class="web-section-1 web-1">
                 <div>
                     <img src="./assets/Group 3.png" alt="">
                 </div>
@@ -44,7 +44,7 @@
                 <h4 class="btn-type">Learn More</h4>
                 </div>
             </section>
-            <section class="web-section-1">
+            <section class="web-section-1 web-2">
                 <div class="web-content">
                 <h2 class="text">I will Do Coding and Change The World</h2>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -57,13 +57,12 @@
          </section>
         <!--My inspiration section starts here  -->
          <section class="motivation">
-            <div>
+            <div class="inspiration-text">
                 <h3>My Inspiration</h3>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
             </div>
-            <div>
-                <video controls width="400px" src=""></video>
-
+            <div class="inspiration-video">
+                <iframe width="1140" height="500" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=ha31vhm0qpaF0AVo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
          </section>
     </main>
