created support section

--- a/index.html
+++ b/index.html
@@ -65,6 +65,42 @@
                 <iframe width="1140" height="500" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=ha31vhm0qpaF0AVo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
          </section>
+         <!-- My Current Target section starts here -->
+         <section class="my-target">
+            <h1>My Current Target</h1>
+            <p>I am trying to improve myself by practicing various kinds of programming language.Here are some example</p>
+            <div class="target-skills">
+                <div class="skill">
+                    <img src="./assets/html.png" alt="">
+                    <h5>HTML</h5>
+                    <p>Already learned basic HTML from many sources by giving time and effort</p>
+                    <h6>Learn More</h6>
+                </div>
+                <div class="skill">
+                    <img src="./assets/css.png" alt="">
+                    <h5>CSS</h5>
+                    <p>Already learned basic CSS from many sources by giving time and effort</p>
+                    <h6>Learn More</h6>
+                </div>
+                <div class="skill">
+                    <img src="./assets/js.png" alt="">
+                    <h5>JavaScript</h5>
+                    <p>Already learned basic JavaScript from many sources by giving time and effort</p>
+                    <h6>Learn More</h6>
+                </div>
+            </div>
+         </section>
+
+
+         <!-- I need Support section starts here -->
+         <section class="support">
+            <h2>I need Support</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <div class="input-element">
+               <input type="text" name="" id="" placeholder="suggest me any feedback">
+                 <input type="submit" class="btn-primary" value="Submit">
+            </div>
+         </section>
     </main>
     <footer>
 
