--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                     <img src="./assets/Group 4.png" alt="">
                 </div>
             </section>
-         </section>
+        </section>
+
         <!--My inspiration section starts here  -->
          <section class="motivation">
             <div class="inspiration-text">
@@ -65,10 +66,12 @@
                 <iframe width="1140" height="500" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=ha31vhm0qpaF0AVo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
          </section>
+
          <!-- My Current Target section starts here -->
          <section class="my-target">
             <h1>My Current Target</h1>
-            <p>I am trying to improve myself by practicing various kinds of programming language.Here are some example</p>
+            <p>I am trying to improve myself by practicing various kinds of programming language.</p>
+            <p class="para">Here are some example</p>
             <div class="target-skills">
                 <div class="skill">
                     <img src="./assets/html.png" alt="">
