--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
            <div class="banner-content">
             <img class="banner-img" src="../assets/Group.png" alt="">
             <h1>"In the near future, I hope to become a <br> Developer."</h1>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+            <p>Ever since I started learning about ICT, I have come this far with the dream of becoming a web developer and I hope that the path forward will be as harder and challenging but I won't give up so easily.</p>
             <button class="banner-btn">Contact with me</button>
            </div>
         </section>
@@ -22,12 +22,12 @@
          <section class="development">
             <div class="web-header">
                 <h1>Why Web Development??</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                <p>I decided to become a web developer out of my different interest in web development and started dreaming.</p>
             </div>
             <section class="web-section-1 web-2">
                 <div class="web-content">
                 <h2 class="text">I will Do Coding and Change The World</h2>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <p>Programming is now making all ICT related tasks easy and effortless.</p>
                 <h4 class="btn-type">Learn More</h4>
                 </div>
                 <div>
@@ -40,14 +40,14 @@
                 </div>
                 <div class="web-content">
                 <h2 class="text">I will help People by creating Modern Web System</h2>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <p>I will help people by creating a software application that will  provide them various services and functionalities through a network.</p>
                 <h4 class="btn-type">Learn More</h4>
                 </div>
             </section>
             <section class="web-section-1 web-2">
                 <div class="web-content">
                 <h2 class="text">I will Do Coding and Change The World</h2>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <p>Programming is now making all ICT related tasks easy and effortless.</p>
                 <h4 class="btn-type">Learn More</h4>
                 </div>
                 <div>
@@ -60,7 +60,7 @@
          <section class="motivation">
             <div class="inspiration-text">
                 <h3>My Inspiration</h3>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                <p>When I see our country's elder brothers and sisters working in big companies in other countries, the interest increases from there</p>
             </div>
             <div class="inspiration-video">
                 <iframe width="1140" height="500" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=ha31vhm0qpaF0AVo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -98,7 +98,7 @@
          <!-- I need Support section starts here -->
          <section class="support">
             <h2>I need Support</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <p>If you like it, you can give feedback below</p>
             <div class="input-element">
                <input type="text" name="" id="" placeholder="suggest me any feedback">
                  <input type="submit" class="btn-primary" value="Submit">
@@ -106,7 +106,31 @@
          </section>
     </main>
     <footer>
-
+        <!-- footer section starts here-->
+        <section class="footer-section">
+            <div class="footer-content">
+                <div>
+                    <p>An Open Commitment by NJ Samira</p>
+                </div>
+                <div class="social-site">
+                    <div>
+                        <a href="https://web.facebook.com"alt="">
+                            <img src="./assets/facebook.png" alt="">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="https://github.com/">
+                            <img src="./assets/github.png" alt="">
+                        </a>
+                    </div>
+                    <div>
+                       <a href="https://bd.linkedin.com/">
+                        <img src="./assets/linkedin-icon 1.png" alt="">
+                       </a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </footer>
 </body>
 </html>
