almost task finished

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <img class="banner-img" src="../assets/Group.png" alt="">
             <h1>"In the near future, I hope to become a <br> Developer."</h1>
             <p>Ever since I started learning about ICT, I have come this far with the dream of becoming a web developer and I hope that the path forward will be as harder and challenging but I won't give up so easily.</p>
-            <button class="banner-btn">Contact with me</button>
+            <a href="#footer-container" class="banner-btn">Contact with me</a>
            </div>
         </section>
     </header>
@@ -73,19 +73,19 @@
             <p>I am trying to improve myself by practicing various kinds of programming language.</p>
             <p class="para">Here are some example</p>
             <div class="target-skills">
-                <div class="skill">
+                <div class="skill skill-item-1">
                     <img src="./assets/html.png" alt="">
                     <h5>HTML</h5>
                     <p>Already learned basic HTML from many sources by giving time and effort</p>
                     <h6>Learn More</h6>
                 </div>
-                <div class="skill">
+                <div class="skill skill-item-2">
                     <img src="./assets/css.png" alt="">
                     <h5>CSS</h5>
                     <p>Already learned basic CSS from many sources by giving time and effort</p>
                     <h6>Learn More</h6>
                 </div>
-                <div class="skill">
+                <div class="skill skill-item-3">
                     <img src="./assets/js.png" alt="">
                     <h5>JavaScript</h5>
                     <p>Already learned basic JavaScript from many sources by giving time and effort</p>
@@ -93,7 +93,6 @@
                 </div>
             </div>
          </section>
-
 
          <!-- I need Support section starts here -->
          <section class="support">
@@ -105,7 +104,7 @@
             </div>
          </section>
     </main>
-    <footer>
+    <footer id="footer-container">
         <!-- footer section starts here-->
         <section class="footer-section">
             <div class="footer-content">
