--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <header>
         <section class="banner-container">
            <div class="banner-content">
-            <img class="banner-img" src="../assets/Group.png" alt="Developer is waiting">
-            <h1>"In the near future, I hope to become a <br> Developer."</h1>
+            <img class="banner-img" src="../assets/Group.png" alt="Developer is waiting"  style="max-width: 240.28px; height: 240px; margin: 26px auto 10px;"/>
+
+            <h1>In the near future, I hope to become a <br> Developer."</h1>
             <p>Ever since I started learning about ICT, I have come this far with the dream of becoming a web developer and I hope that the path forward will be as harder and challenging but I won't give up so easily.</p>
             <a href="#footer-container" class="banner-btn">Contact with me</a>
            </div>
