--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
          <!-- I need Support section starts here -->
          <section class="support">
             <h2>I need Support</h2>
-            <p>If you like it, you can give feedback below</p>
+            <p>If you like it, you can give me feedback below</p>
             <div class="input-element">
-               <input type="text" name="" id="" placeholder="suggest me any feedback">
+               <input type="text" name="" id="" placeholder="suggest me">
                  <input type="submit" class="btn-primary" value="Submit">
             </div>
          </section>
