finally assignment done

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="web-content">
                 <h2 class="text">I will Do Coding and Change The World</h2>
                 <p>Programming is now making all ICT related tasks easy and effortless.</p>
-                <h4 class="btn-type">Learn More</h4>
+                <a href="https://www.w3schools.com/" class="btn-type">Learn More</a>
                 </div>
                 <div>
                     <img src="./assets/Layer_1.png" alt="">
@@ -42,14 +42,14 @@
                 <div class="web-content">
                 <h2 class="text">I will help People by creating Modern Web System</h2>
                 <p>I will help people by creating a software application that will  provide them various services and functionalities through a network.</p>
-                <h4 class="btn-type">Learn More</h4>
+                <a href="https://www.w3schools.com/" class="btn-type">Learn More</a>
                 </div>
             </section>
             <section class="web-section-1 web-2">
                 <div class="web-content">
                 <h2 class="text">I will Do Coding and Change The World</h2>
                 <p>Programming is now making all ICT related tasks easy and effortless.</p>
-                <h4 class="btn-type">Learn More</h4>
+                <a href="https://www.w3schools.com/" class="btn-type">Learn More</a>
                 </div>
                 <div>
                     <img src="./assets/Group 4.png" alt="">
@@ -78,19 +78,19 @@
                     <img src="./assets/html.png" alt="">
                     <h5>HTML</h5>
                     <p>Already learned basic HTML from many sources by giving time and effort</p>
-                    <h6>Learn More</h6>
+                    <a href="https://www.w3schools.com/" class="skill-btn">Learn More</a>
                 </div>
                 <div class="skill skill-item-2">
                     <img src="./assets/css.png" alt="">
                     <h5>CSS</h5>
                     <p>Already learned basic CSS from many sources by giving time and effort</p>
-                    <h6>Learn More</h6>
+                    <a href="https://www.w3schools.com/" class="skill-btn">Learn More</a>
                 </div>
                 <div class="skill skill-item-3">
                     <img src="./assets/js.png" alt="">
                     <h5>JavaScript</h5>
                     <p>Already learned basic JavaScript from many sources by giving time and effort</p>
-                    <h6>Learn More</h6>
+                    <a href="https://www.w3schools.com/" class="skill-btn">Learn More</a>
                 </div>
             </div>
          </section>
